# Coursework_Data_Base

./: README.md  main.py  pyproject.toml
src/: api_hh.py  db_manager.py  db_setup.py
